--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "vk-cover",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "vk-cover",
   "author": "Roman Oskolkov",
   "main": "index.js",
-  "scripts": {},
   "license": "MIT",
   "dependencies": {
-    "restler": "^3.4.0",
+    "restler-base": "^3.4.6",
     "vksdk": "^5.3.2"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "node test.js"
   },
   "repository": {
     "type": "git",
@@ -20,9 +18,5 @@
   },
   "keywords": [
     "vk"
-  ],
-  "bugs": {
-    "url": "https://github.com/wildneo/vk-cover/issues"
-  },
-  "homepage": "https://github.com/wildneo/vk-cover#readme"
+  ]
 }
